--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.15MB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: c94c922d-c833-48c1-b9d1-81c8b7b826f9, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.68MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.72MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇩🇪 德国-1.14MB/s(Youtube:不良林), server: 165.22.93.103, port: 28443, type: trojan, password: c94c922d-c833-48c1-b9d1-81c8b7b826f9, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.00MB/s(Youtube:不良林), server: sg2602.cloudmatrix.xyz, port: 2602, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: sg2602.cloudmatrix.xyz}}
-  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: us24051.cloudmatrix.xyz, port: 24051, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24051.cloudmatrix.xyz}}
-  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: sg2601.cloudmatrix.xyz, port: 2601, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: sg2601.cloudmatrix.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.11MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
   - {name: 🇨🇳 中国-683.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: us24051.cloudmatrix.xyz, port: 24051, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24051.cloudmatrix.xyz}}
+  - {name: 🇭🇰 香港-732.4KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: sg2601.cloudmatrix.xyz, port: 2601, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: sg2601.cloudmatrix.xyz}}
+  - {name: 🇨🇳 中国-333.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-530.1KB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-395.9KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇨🇳 台湾-688.6KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-683.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-732.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-688.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-683.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-732.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-688.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-683.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-732.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-688.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.72MB/s(Youtube:不良林)
+      - 🇭🇰 香港-732.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-688.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-683.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-732.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-688.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-683.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-732.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-688.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-683.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-732.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-688.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-683.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇭🇰 香港-732.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-688.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.98MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
